typescript/checker/tests/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity12.ts.stderr
error: Unexpected token Some(AssignOp("="))
 --> $DIR/tests/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity12.ts:1:6
  |
1 | 1 >> = 2;
  |      ^

